--- a/src/_includes/layouts/marketing/base.html
+++ b/src/_includes/layouts/marketing/base.html
@@ -2,15 +2,7 @@
 <html lang="en">
 
 <head>
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-8NQWMRR7JG"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'G-8NQWMRR7JG');
-  </script>
+  {# GA now provided by partials/tracking.html #}
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
@@ -21,7 +13,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="/css/kit.css">
-  {% include "partials/happierleads.html" %}
+  {% if env.isProd %}{% include "partials/tracking.html" %}{% endif %}
 </head> 
 
 
