--- a/src/_includes/partials/site-headB.html
+++ b/src/_includes/partials/site-headB.html
@@ -26,7 +26,7 @@
         <li class="px-6 py-3">
           <button @click="activeAccordion = activeAccordion === 'solutions' ? null : 'solutions'" class="inline-flex items-center text-center text-slate-100 hover:text-slate-300" type="button">
             Our Solutions
-            <svg class="w-4 h-4 ml-2 transition-transform duration-300" :class="{'rotate-180': activeAccordion === 'solutions'}" aria-hidden="true" fill="none" stroke="currentColor"
+            <svg class="w-4 h-4 ml-2 transition-transform duration-300 gpu smooth" :class="{'rotate-180': activeAccordion === 'solutions'}" aria-hidden="true" fill="none" stroke="currentColor"
               viewBox="0 0 24 24">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path>
             </svg>
@@ -61,7 +61,7 @@
             <h3 class="text-xl font-bold tracking-tight text-white group-hover:text-teal-400">
               {{ main.text }}
             </h3>
-            <svg class="w-5 h-5 transition-transform duration-300 opacity-0 group-hover:opacity-100 group-hover:translate-x-1" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <svg class="w-5 h-5 transition-transform duration-300 opacity-0 group-hover:opacity-100 group-hover:translate-x-1 gpu smooth" fill="none" stroke="currentColor" viewBox="0 0 24 24">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3" />
             </svg>
           </div>
@@ -99,7 +99,7 @@
               <h3 class="text-xl font-bold tracking-tight text-white group-hover:text-teal-400">
                 AllDesk Ai
               </h3>
-              <svg class="w-5 h-5 transition-transform duration-300 opacity-0 group-hover:opacity-100 group-hover:translate-x-1" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <svg class="w-5 h-5 transition-transform duration-300 opacity-0 group-hover:opacity-100 group-hover:translate-x-1 gpu smooth" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3" />
               </svg>
             </div>
