--- a/src/_includes/partials/tracking.html
+++ b/src/_includes/partials/tracking.html
@@ -32,7 +32,23 @@ s.parentNode.insertBefore(b, s);})(window.lintrk);
 <noscript>
 <img height="1" width="1" style="display:none;" alt="" src="https://px.ads.linkedin.com/collect/?pid=6916380&fmt=gif" />
 </noscript>
-<!-- Start of HubSpot Embed Code -->
-<script type="text/javascript" id="hs-script-loader" async defer src="//js-na2.hs-scripts.com/242649812.js"></script>
-<!-- End of HubSpot Embed Code -->
-
+<!-- HubSpot: defer load until idle or window.load to reduce early CPU/network -->
+<script>
+(function(){
+  function loadHs(){
+    if (document.getElementById('hs-script-loader')) return;
+    var s = document.createElement('script');
+    s.type = 'text/javascript';
+    s.id = 'hs-script-loader';
+    s.async = true;
+    s.defer = true;
+    s.src = '//js-na2.hs-scripts.com/242649812.js';
+    (document.body || document.documentElement).appendChild(s);
+  }
+  if ('requestIdleCallback' in window){
+    requestIdleCallback(loadHs, { timeout: 3000 });
+  } else {
+    window.addEventListener('load', loadHs, { once: true });
+  }
+})();
+</script>
