--- a/src/_includes/layouts/home.html
+++ b/src/_includes/layouts/home.html
@@ -1232,11 +1232,13 @@ x
             <img class="w-10 h-10 md:w-12 md:h-12 mb-4 md:mb-6" src="{{ s0.icon }}" alt="{{ s0.title }}" aria-hidden="true">
             <h3 class="text-teal-400 font-extrabold text-2xl md:text-3xl tracking-tight">{{ s0.title }}</h3>
             <p class="text-slate-300 mt-2 md:mt-3">{{ s0.description }}</p>
+            <a class="inline-block mt-3 font-semibold text-teal-400 hover:text-teal-300 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-teal-500/60 rounded-sm" href="{{ s0.link }}">{{ s0.linkText }}</a>
           </article>
           <article class="p-8 md:p-10">
             <img class="w-10 h-10 md:w-12 md:h-12 mb-4 md:mb-6" src="{{ s1.icon }}" alt="{{ s1.title }}" aria-hidden="true">
             <h3 class="text-teal-400 font-extrabold text-2xl md:text-3xl tracking-tight">{{ s1.title }}</h3>
             <p class="text-slate-300 mt-2 md:mt-3">{{ s1.description }}</p>
+            <a class="inline-block mt-3 font-semibold text-teal-400 hover:text-teal-300 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-teal-500/60 rounded-sm" href="{{ s1.link }}">{{ s1.linkText }}</a>
           </article>
         </div>
         <!-- Row 2 -->
@@ -1247,11 +1249,13 @@ x
             <img class="w-10 h-10 md:w-12 md:h-12 mb-4 md:mb-6" src="{{ s2.icon }}" alt="{{ s2.title }}" aria-hidden="true">
             <h3 class="text-teal-400 font-extrabold text-2xl md:text-3xl tracking-tight">{{ s2.title }}</h3>
             <p class="text-slate-300 mt-2 md:mt-3">{{ s2.description }}</p>
+            <a class="inline-block mt-3 font-semibold text-teal-400 hover:text-teal-300 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-teal-500/60 rounded-sm" href="{{ s2.link }}">{{ s2.linkText }}</a>
           </article>
           <article class="p-8 md:p-10">
             <img class="w-10 h-10 md:w-12 md:h-12 mb-4 md:mb-6" src="{{ s3.icon }}" alt="{{ s3.title }}" aria-hidden="true">
             <h3 class="text-teal-400 font-extrabold text-2xl md:text-3xl tracking-tight">{{ s3.title }}</h3>
             <p class="text-slate-300 mt-2 md:mt-3">{{ s3.description }}</p>
+            <a class="inline-block mt-3 font-semibold text-teal-400 hover:text-teal-300 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-teal-500/60 rounded-sm" href="{{ s3.link }}">{{ s3.linkText }}</a>
           </article>
         </div>
       </div>
