--- a/src/_includes/layouts/home.html
+++ b/src/_includes/layouts/home.html
@@ -1,7 +1,7 @@
 {% extends "layouts/base-home.html" %}
 {% block content %}
 
-<header class="relative z-0 flex items-center justify-center min-h-screen md:h-screen overflow-hidden text-white bg-black" style="min-height:100svh;">
+<header class="relative z-0 flex items-center justify-center overflow-hidden text-white bg-black" style="height:80svh;">
   <!-- Content Container -->
   <div class="container absolute z-30 max-w-screen-xl px-4 py-16 mx-auto">
     <div class="flex flex-col items-center">
